--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="nav_header_margin">16dp</dimen>
     <dimen name="logo_size">100dp</dimen>
     <dimen name="about_icons_size">70dp</dimen>
+    <dimen name="cardview_radius">18dp</dimen>
 </resources>
