--- a/app/src/main/res/menu/menu_notes_list_context.xml
+++ b/app/src/main/res/menu/menu_notes_list_context.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/action_edit"
+        android:title="@string/edit_note" />
+
+    <item
         android:id="@+id/action_delete"
         android:title="@string/delete_note" />
 
